# Fukuro

./: .editorconfig  .gitignore  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Makefile  Makefile.am  README.md  annotated.html  annotated_dup.js  bootstrap.sh  classes.html  codecov.yml  compile_flags.txt  configure.ac  dir_000000_000003.html  dir_000000_000008.html  dir_000001_000008.html  dir_000001_000009.html  dir_000002_000003.html  dir_000002_000008.html  dir_000002_000009.html  dir_000003_000004.html  dir_000003_000009.html  dir_000003_000013.html  dir_000003_000014.html  dir_000003_000017.html  dir_000004_000003.html  dir_000004_000008.html  dir_000004_000009.html  dir_000004_000012.html  dir_000004_000014.html  dir_000004_000017.html  dir_000004_000019.html  dir_000005_000003.html  dir_000005_000009.html  dir_000006_000003.html  dir_000006_000009.html  (+303 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml  doc.yml
arch/aarch64/: arch.c  boot.s  build.mk  linker.ld  rpi.h  serial.c  serial.h  utils.s
arch/arm/: arch.c  boot.S  boot.s  build.mk  linker.ld
arch/generic/: arch.h  stivale2.h
arch/i686/: arch.c  boot.S  boot.s  build.mk  cpuid.c  cpuid.h  gdt.c  gdt.h  gdt.s  idt.c  idt.h  idt.s  isr.c  isr.h  linker.ld  pic.c  pic.h  serial.c  serial.h  vga.c  vga.h
arch/x86/: greeting.c  greeting.h  serial.c  serial.h  vga.c  vga.h
arch/x86_64/: arch.c  build.mk  linker.ld  serial.h  stivale.h
build-aux/: git-version
d0/d17/: structpmap__coll__graph.map  structpmap__coll__graph.md5
d0/d29/: main_8c.html  main_8c.js
d0/d7e/: aarch64_2serial_8h.html  aarch64_2serial_8h.js  aarch64_2serial_8h_source.html
d0/d9d/: aarch64_2arch_8c.html  (+1 more)
docs/: credits.md  layout.md
kernel/: build.mk  logger.c  logger.h  main.c
lib/: Makefile.am
libk/: build.mk  itoa.c  strlen.c  strrev.c
m4/: asm.m4
scripts/: build_toolchain.sh  format.sh  gen_iso.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  enums_0.js  (+54 more)
srv/: Makefile.am  configfrag.ac
sys/: Makefile.am  configfrag.ac  main.c  version.c
sys/aarch64/: boot.S
sys/amd64/: Makefrag.am  boot.S  kernel.lds
sys/arm/: Makefrag.am  boot.S  linker.ld
sys/i686/: Makefrag.am  boot.S  kernel.lds  pmap.h  unpaged_init.c
sys/include/fukuro/: kinfo.h  spinlock.h
sys/riscv/: Makefrag.am  asm.h  boot.S  kernel.lds  linker.ld  pmap.h  sbi.h  trap.c  vector.S
sys/sys/: multiboot.h
sys/vm/: pmap.h  vm.h
test/: Kconfig  build.mk  itoa_test.c  memset_test.c  strlen_test.c  strrev_test.c  test.c
tools/: build.mk  build_toolchain.sh  config.py  setup-toolchain
(+421 files in other folders)
